# libft

./: .gitignore  Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  (+6 more)
libft_tester-master(1)/libft_tester-master/: Module.vapi  README.md  SupraLeak.vala  SupraTest.vala  delegate.vala  finder_project.vala  install.sh  leak.c  main.vala  meson.build
libft_tester-master(1)/libft_tester-master/bonus_test/: lstadd_back_test.vala  lstadd_front_test.vala  lstclear_test.vala  lstdelone_test.vala  lstiter_test.vala  lstlast_test.vala  lstmap_test.vala  lstnew_test.vala  lstsize_test.vala  meson.build
libft_tester-master(1)/libft_tester-master/mandatory_test/: atoi_test.vala  bzero_test.vala  calloc_test.vala  isalnum_test.vala  isalpha_test.vala  isascii_test.vala  isdigit_test.vala  isprint_test.vala  itoa_test.vala  memchr_test.vala  memcmp_test.vala  memcpy_test.vala  memmove_test.vala  memset_test.vala  meson.build  putchar_fd_test.vala  putendl_fd_test.vala  putnbr_fd_test.vala  putstr_fd_test.vala  split_test.vala  strchr_test.vala  strdup_test.vala  striteri_test.vala  (+12 more)
