files_vala += files(
  'atoi_test.vala',
  'bzero_test.vala',
  'calloc_test.vala',
  'isalnum_test.vala',
  'isalpha_test.vala',
  'isascii_test.vala',
  'isdigit_test.vala',
  'isprint_test.vala',
  'itoa_test.vala',
  'memchr_test.vala',
  'memcmp_test.vala',
  'memcpy_test.vala',
  'memmove_test.vala',
  'memset_test.vala',
  'putchar_fd_test.vala',
  'putendl_fd_test.vala',
  'putnbr_fd_test.vala',
  'putstr_fd_test.vala',
  'split_test.vala',
  'strchr_test.vala',
  'strdup_test.vala',
  'striteri_test.vala',
  'strjoin_test.vala',
  'strlcat_test.vala',
  'strlcpy_test.vala',
  'strlen_test.vala',
  'strmapi_test.vala',
  'strncmp_test.vala',
  'strnstr_test.vala',
  'strrchr_test.vala',
  'strtrim_test.vala',
  'substr_test.vala',
  'tolower_test.vala',
  'toupper_test.vala'
)
